fix some spacings & update BM v3 readme

--- a/src/theme/_variables.scss
+++ b/src/theme/_variables.scss
@@ -92,7 +92,7 @@ $horizontal-space-small-screens: $spacing-small !default;
 $block-vertical-space: 20px !default;
 
 // Change of color
-$color-block-change-vertical-spacing: $spacing-xlarge !default;
+$color-block-change-vertical-spacing: $spacing-large !default;
 
 // Grids
 $grid-block-vertical-spacing-top: $spacing-large !default;
